# aurumq-rl

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: README.md
docs/: ARCHITECTURE.md  DATA_EXTRACTION.md  FACTORS.md  INFERENCE.md  SCHEMA.md  TRAINING.md  TRAINING_HISTORY.md  example_query.sql  example_query_with_index.sql
examples/: quickstart.py
handoffs/2026-05-03-phase17-7h/: HANDOFF_2026-05-03_phase17.md
handoffs/2026-05-03-phase18-6h/: HANDOFF_2026-05-03_phase18.md  PHASE18_6H_UNATTENDED_INSTRUCTIONS.md
handoffs/2026-05-03-phase19-validation/: HANDOFF_2026-05-03_phase19.md
handoffs/2026-05-05-phase20-long-data/: HANDOFF_2026-05-05_phase20.md
handoffs/2026-05-05-phase21-v2-architecture/: HANDOFF_2026-05-05_phase21.md
reports/phase18_6h/: ensemble_eval.md  ensemble_eval_final.json  ensemble_eval_final.md  ensemble_eval_stage_a.json  ensemble_eval_stage_a.md  ensemble_eval_stage_b_after_seed5.json  ensemble_eval_stage_b_after_seed5.md  ensemble_eval_stage_b_after_seed6.json  ensemble_eval_stage_b_after_seed6.md  ensemble_eval_stage_b_after_seed7.json  ensemble_eval_stage_b_after_seed7.md  final_ranking.md  seed2_failure_diagnostics.md
reports/phase19_validation/: data_freshness.json  data_freshness.md  ensemble_ablation.json  ensemble_ablation.md  execution_sim.json  execution_sim.md  fixed_window_eval.json  fixed_window_eval.md  preflight.json  seed4_forensics.json  seed4_forensics.md
reports/phase20_long_data/: ensemble_eval_phase20_mix.json  ensemble_eval_phase20_mix.md
scripts/: _ensemble_eval.py  _eval_all_checkpoints.py  _industry_oos_analysis.py  _phase18_seed2_diag.py  _phase19_ablation_and_seed4.py  _phase19_execution_sim.py  _phase19_multi_window_eval.py  _phase21_sanity_checks.py  compare_rewards.py  eval_backtest.py  eval_factor_importance.py  export_factor_panel.py  generate_synthetic.py  infer.py  oss_download_resumable.py  oss_migrate_to_fromsz.py  oss_upload_handoff.py  oss_upload_phase16.py  oss_upload_phase17.py  oss_upload_phase18.py  oss_upload_phase19.py  oss_upload_phase20.py  train.py  train_v2.py  web_dashboard.ps1  web_dashboard.sh
scripts/reference_data/: build_alpha101_reference.py  build_gtja191_reference.py
src/aurumq_rl/: __init__.py  backtest.py  data_loader.py  env.py  factor_importance.py  feature_extractor.py  gpu_env.py  gpu_monitor.py  gpu_rollout_buffer.py  index_dict_rollout_buffer.py  index_rollout_buffer.py  inference.py  metrics.py  onnx_export.py  policy.py  portfolio_weight_env.py  ppo_profiled.py  price_limits.py  profiler_utils.py  reward_functions.py  sb3_callbacks.py  (+1 more)
tests/: _synthetic_panel.py  conftest.py  test_backtest.py  test_backtest_series.py  test_data_loader.py  test_data_loader_phase21.py  test_data_loader_universe.py  test_env.py  test_factor_importance.py  test_feature_extractor_phase21.py  test_gpu_env.py  test_gpu_env_phase21.py  test_gpu_monitor.py  test_gpu_rollout_buffer.py  test_index_dict_rollout_buffer.py  test_index_rollout_buffer.py  test_inference.py  test_metrics.py  test_phase16_fixes.py  test_policy.py  test_policy_phase21.py  test_price_limits.py  test_profiler_utils.py  test_reward_functions.py  test_smoke.py  test_synthetic_data.py  test_train_cli.py  test_train_v2_cli.py
web/: package-lock.json  package.json
(+383 files in other folders)
